インデント修正と不要クラス除去

--- a/WebPage/TOMIgnite!/sp/about.html
+++ b/WebPage/TOMIgnite!/sp/about.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <title>当サイトと我々</title>
     <link rel="icon" type="image.png" href="images/favicon.png">
-　   <link rel="stylesheet" href="css/tomignite.css">
+	<link rel="stylesheet" href="css/tomignite.css">
+	<link rel="stylesheet" type="text/css" href="css/slick.css">
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
   </head>
 
   <body>
@@ -88,13 +90,13 @@
                   </a>
                   合格！！！！！
                   <a href="https://www.aft.or.jp/" target="_blank">
-                    色彩検定1級
+                    色彩検定1級2次
                   </a>
                   勉強ニツキ、応援求ム。
                 </span>
                 <span style="font-size:5px;">Copyright © 2021  Tommy_Victoria  All Rights Reserved.
                 </span>
-              　</div>
+              </div>
             </center>
           </div>
         </footer>
