--- a/WebPage/TOMIgnite!/sp/test.html
+++ b/WebPage/TOMIgnite!/sp/test.html
@@ -8,7 +8,7 @@
     <meta name="description" content="万能人チーム.pro;">
     <title>TOMIgnite!</title>
     <link rel="icon" type="image.png" href="images/favicon.png">
-　   <link rel="stylesheet" href="css/tomignite.css">
+    <link rel="stylesheet" href="css/tomignite-sp.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
   </head>
