--- a/WebPage/TOMIgnite!/test-siries/test3-navi.html
+++ b/WebPage/TOMIgnite!/test-siries/test3-navi.html
@@ -2,52 +2,47 @@
 <html lang="ja">
 
 <!--head---------------------------->
- <head>
+<head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="css/test2-navi.css">
+  <link rel="stylesheet" type="text/css" href="css/test3-navi.css">
 
-
-<!--アコーディオンUI作成！！！！！-->
-　<div class="accordion">
-  　<div class="tab">
-    　<input id="tab-one" type="checkbox" name="tabs">
+  <!--アコーディオンUI作例-->
+  <div class="accordion">
+    <div class="tab">
+      <input id="tab-one" type="checkbox" name="tabs">
       <label for="tab-one">当サイトと我々</label>
       <div class="tab-content">
-         <p>
-           Tommy Victoria は我々 “ TOMI1gnite! ” の長。<br>
-           我々 “ TOMIgnite! ” は凡庸な組織。<br>
-           <br>
-           どこにでもいるような雑多な存在を寄せ集めた、極めて凡庸な組織。<br>
-           しかし我々は組織。<br>
-           この組織、当サイトの目的は一つ。この凡庸を以てしてただ知らしめるのみ。<br>
-         </p>
-     </div>
-   </div>
+        <p>
+          Tommy Victoria は我々 “ TOMI1gnite! ” の支配人。<br>
+          我々 “ TOMIgnite! ” は凡庸な組織。<br>
+          <br>
+          この組織の目的とは知行合一を成し、凡こそ主であると唱えることにある。<br>
+        </p>
+    </div>
+  </div>
 
   <div class="tab">
      <input id="tab-two" type="checkbox" name="tabs">
      <label for="tab-two">お知らせ</label>
       <div class="tab-content">
       <p>Label Two 内コンテンツ</p>
-  　 </div>
+     </div>
   </div>
 
   <div class="tab">
-     <input id="tab-three" type="checkbox" name="tabs">
-     <label for="tab-three">実績</label>
-      <div class="tab-content">
+    <input id="tab-three" type="checkbox" name="tabs">
+    <label for="tab-three">実績</label>
+    <div class="tab-content">
       <p>Label Three 内コンテンツ</p>
-  　 </div>
+    </div>
   </div>
 
   <div class="tab">
-     <input id="tab-four" type="checkbox" name="tabs">
-     <label for="tab-four">依頼/問合</label>
-      <div class="tab-content">
+    <input id="tab-four" type="checkbox" name="tabs">
+    <label for="tab-four">依頼/問合</label>
+    <div class="tab-content">
       <p>Label Four 内コンテンツ</p>
-  　 </div>
+    </div>
   </div>
 
-
-
-</div>
+</head>
