スマホ版にviewport追加

--- a/WebPage/TOMIgnite!/sp/about.html
+++ b/WebPage/TOMIgnite!/sp/about.html
@@ -4,11 +4,10 @@
 <!--head---------------------------->
   <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
     <title>当サイトと我々</title>
     <link rel="icon" type="image.png" href="images/favicon.png">
 	<link rel="stylesheet" href="css/tomignite.css">
-	<link rel="stylesheet" type="text/css" href="css/slick.css">
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
   </head>
 
   <body>
