--- a/WebPage/TOMIgnite!/sp/about.html
+++ b/WebPage/TOMIgnite!/sp/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ja">
 
-<!--head---------------------------->
+<!--当サイトと我々画面-->
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -18,6 +18,7 @@
 					<center>
 						<div class="subNavi"  alt="about">当サイトと我々</div>
 					</center>
+					<!--ナビ-->
 					<nav>
 						<ul>
 							<li><a href="./index.html">トップへ戻る</a></li>
@@ -31,11 +32,10 @@
       	</div>
     </div>
 
-<!--body------------------------->
   	<div id="body-bk" class="aboutBackground">
-    	<div id="body" >
+    	<div id="body">
       		<div class="about">
-          		<div class="aboutContents">当サイトの目的</div>
+          		<div class="aboutContentsLineLess">当サイトの目的</div>
           		<div class="aboutContents">Ⅰ.全活動のポートフォリオ化</div>
           		<p class="aboutContents">
             		このサイトは Tommy Victor の行動をポートフォリオのような形として残すためのサイトです。
@@ -103,5 +103,4 @@
       	</div>
     </div>
 </div>
-
 </html>
