ディレクトリ整備

--- a/WebPage/TOMIgnite!/sp/nav/about/about.html
+++ b/WebPage/TOMIgnite!/sp/nav/about/about.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
     <title>当サイトと我々</title>
-    <link rel="icon" type="image.png" href="images/favicon.png">
-	<link rel="stylesheet" href="css/tomignite.css">
+    <link rel="icon" type="image.png" href="../images/favicon.png">
+	<link rel="stylesheet" href="about.css">
 </head>
 
 <body>
@@ -21,9 +21,9 @@
 					<!--ナビ-->
 					<nav>
 						<ul>
-							<li><a href="./index.html">トップへ戻る</a></li>
-                			<li><a href="./test.html">お知らせ(テ)</a></li>
-                			<li><a href="images/seisakutyu_yoko.png">実績</a></li>
+							<li><a href="../../index.html">トップへ戻る</a></li>
+                			<li><a href="../test/test.html">お知らせ(テ)</a></li>
+                			<li><a href="../images/seisakutyu_yoko.png">実績</a></li>
                 			<li><a href="http://tomignite.pro/wp/contact/">依頼／問合</a></li>
               			</ul>
             		</nav>
