--- a/WebPage/TOMIgnite!/sp/index.html
+++ b/WebPage/TOMIgnite!/sp/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="万能人チーム.pro;">
     <title>TOMIgnite!</title>
     <link rel="icon" type="image.png" href="images/favicon.png">
-	<link rel="stylesheet" href="css/tomignite.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css">
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
+	<link rel="stylesheet" href="top_css/tomignite.css">
+    <link rel="stylesheet" type="text/css" href="top_css/slick.css">
+    <link rel="stylesheet" type="text/css" href="top_css/slick-theme.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
             		</center>
             		<nav>
               			<ul>
-                			<li><a href="./about.html">当サイトと我々</a></li>
+                			<li><a href="nav/about/about.html">当サイトと我々</a></li>
                 			<li><a href="images/seisakutyu_tate.png">お知らせ</a></li>
                 			<li><a href="images/seisakutyu_tate.png">実績</a></li>
                 			<li><a href="http://tomignite.pro/wp/contact/">依頼／問合</a></li>
@@ -213,7 +213,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/slick.js"></script>
+    <script src="top_js/slick.js"></script>
     <script>
       	$(document).ready(function(){
         	$('.slider').slick({
@@ -232,7 +232,7 @@
         	});
       	});
     </script>
-    <script src="js/alert.js"></script>
+    <script src="top_js/alert.js"></script>
 </body>
 
 </html>
