--- a/WebPage/TOMIgnite!/test_page/adtommy.html
+++ b/WebPage/TOMIgnite!/test_page/adtommy.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html lang="ja">
 
- <head>
-  <meta charset="UTF-8">
-  <title>M・D・TOMMY</title>
+<head>
+  	<meta charset="UTF-8">
+  	<title>A・D・TOMMY</title>
 </head>
 
 <body>
-  <h1>M・D・TOMMY</h>
-
+  	<div id="header">
+  	<header>A・D・TOMMY</h>
 </body>
 
 <footer>
-  <div class="footer-container">
+  	<div class="footer">
     <p><small>Copyright &copy; 2020 TOMI All Rights Reserved.
 </footer>
 
