--- a/WebPage/TOMIgnite!/nav/about/about.html
+++ b/WebPage/TOMIgnite!/nav/about/about.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
     <title>当サイトと我々</title>
-    <link rel="icon" type="image.png" href="images/favicon.png">
+    <link rel="icon" type="image.png" href="../../images/favicon.png">
 	<link rel="stylesheet" href="about.css">
 </head>
 
@@ -23,7 +23,7 @@
 						<ul>
 							<li><a href="../../index.html">トップへ戻る</a></li>
                 			<li><a href="../test/test.html">お知らせ(テ)</a></li>
-                			<li><a href="images/seisakutyu_yoko.png">実績</a></li>
+                			<li><a href="../../images/seisakutyu_yoko.png">実績</a></li>
                 			<li><a href="http://tomignite.pro/wp/contact/">依頼／問合</a></li>
               			</ul>
             		</nav>
@@ -35,8 +35,8 @@
   	<div id="body-bk" class="aboutBackground">
     	<div id="body">
       		<div class="about">
-          		<div class="aboutContentsLineLess">当サイトの目的</div>
-          		<div class="aboutContents">Ⅰ.全活動のポートフォリオ化</div>
+          		<div class="aboutContents">当サイトの目的</div>
+          		<div class="aboutContentsLineLess">Ⅰ.全活動のポートフォリオ化</div>
           		<p class="aboutContents">
             		このサイトは Tommy Victor の行動をポートフォリオのような形として残すためのサイトです。
             		<br>
@@ -45,7 +45,7 @@
             		トップページでは
             		スライダにはカテゴリ別コンテンツ、Highlight には特に観てほしい記事、Topics には最新の更新記事を載せるような構成となります。
           		</p>
-          		<div class="aboutContents">Ⅱ.共有の場 </div>
+          		<div class="aboutContentsLineLess">Ⅱ.共有の場 </div>
           		<p class="aboutContents">
             		私の創作活動が何らかの形で人々の目に留まり、ただ自分が好きなものを知ってほしい、あるいは
             		共有、共感できる人間を探したい、その一心で作りました。
