テストページ実装追加

--- a/WebPage/TOMIgnite!/sp/nav/about/about.html
+++ b/WebPage/TOMIgnite!/sp/nav/about/about.html
@@ -16,14 +16,15 @@
 			<div id="header">
 				<header>
 					<center>
-						<div class="subNavi"  alt="about">当サイトと我々</div>
-					</center>
-					<!--ナビ-->
-					<nav>
-						<ul>
-							<li><a href="../../index.html">トップへ戻る</a></li>
-                			<li><a href="../test/test.html">お知らせ(テ)</a></li>
-                			<li><a href="../../images/seisakutyu_yoko.png">実績</a></li>
+						<a href="../../index.html">
+							<img src="../../images/title_mintyou.png" width="200px" alt="tomignite!">
+						</a>
+            		</center>
+            		<nav>
+              			<ul>
+                			<li><a href="about.html">当サイトと我々</a></li>
+                			<li><a href="../../images/seisakutyu_tate.png">お知らせ</a></li>
+                			<li><a href="images/seisakutyu_tate.png">実績</a></li>
                 			<li><a href="http://tomignite.pro/wp/contact/">依頼／問合</a></li>
               			</ul>
             		</nav>
